﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-07-18
	Internal: Simplified/unified some parts of the code to reduce repeating.
	Changed: Processing counter is now only updated on UI update tick and not on every single change.
		Should impact CPU usage of process scan events.
### 2019-07-12
	Added: Experimental system loader analysis. No UI yet.
	Fixed: Rare weirdness with watchlist.
### 2019-07-09
	Added: Legacy workaround option to force pre-Win2k apps to run on single core. No GUI config yet.
	Fixed: Flickering in ListViews when resizing
### 2019-07-06
	Added: --nolog command line argument to disable logging to disk.
### 2019-07-01
	Changed: Ensure multiple initialization failures all get logged.
	Fixed: Fix for adjust delay debugging printing errors when it encounters empty CreationDate in __InstanceCreationEvent.TargetInstance.
	Fixed: Weird ReflectionTypeLoadException error
### 2019-06-30
	Changed: Rule name is now included in process start&exit logging.
### 2019-06-29
	Changed: Crash log now includes filename of fault location.
	Changed: Safer native calls.
	Changed: App version is no longer stated in main window title bar.
### 2019-06-28
	Fixed: DynDNS update was not properly closed, potentially leaking an open connection (until it times out).
	Changed: DynDNS setup no longer is limited to single service. Only one type of updates are supported still, however.
	Changed: Disabled some unneeded features of .NET/C#, hopefully resulting in slightly faster start-up time.
	Fixed: Initialization failure bleeds through and the app is launched "successfully".
### 2019-06-26
	Changed: IP address handling.
	Fixed: Link-local network addresses were reported as public ones.
	Fixed: Some deadlocks, mostly related to exclusive mode.
### 2019-06-25
	Fixed: Health Monitor was using free memory bytes as megabytes.
	Added: Basic DynDNS support test.